[package]
name = "OrderBook"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "=1.4.1", features = ["stargate"] }
cw-storage-plus = "1.1.0"
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
# Other dependencies specific to OrderBook


